Change to support oauth2_server module

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,7 @@
             "email": "stefan@auditor.email"
         }
     ],
-    "require": {}
+    "require": {
+        "ext-json": "*"
+    }
 }
