--- a/openid_connect_discovery.info.yml
+++ b/openid_connect_discovery.info.yml
@@ -4,4 +4,4 @@ description: OpenID Connect discovery mechanism.
 package: User authentication
 core_version_requirement: ^8 || ^9
 dependencies:
-  - simple_oauth
+  - oauth2_server
